@@ -36,7 +36,7 @@ build-stamp: config.status
 clean: unpatch
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
+	rm -f build-stamp debian/$(sname).init
 
 	# Cleaning package
 	rm -rf out
@@ -99,6 +99,8 @@ install: build
 	install -D -m 0644 debian/desktop/virtualbox-ose.desktop debian/$(sname)/usr/share/applications/virtualbox-ose.desktop
 	install -D -m 0644 src/VBox/Frontends/VirtualBox/images/ico32x01.png debian/$(sname)/usr/share/icons/virtualbox.png
 	install -D -m 0644 debian/pixmap/virtualbox-ose.xpm debian/$(sname)/usr/share/pixmaps/virtualbox-ose.xpm
+	install -D -m 644 src/VBox/Installer/linux/vboxnet.sh debian/$(sname).init
+	install -D -m 644 debian/interfaces debian/$(sname)/etc/vbox
 
 	echo "# VirtualBox installation directory" > $(CURDIR)/debian/$(sname)/etc/vbox/vbox.cfg
 	echo "INSTALL_DIR="\"/usr/lib/virtualbox\" >> $(CURDIR)/debian/$(sname)/etc/vbox/vbox.cfg
@@ -156,6 +158,7 @@ binary-arch: build install
 	dh_compress -a
 	dh_fixperms -X=/usr/lib/virtualbox/VBox.sh -a
 	dh_installudev -a
+	dh_installinit -a
 	dh_installdeb -a
 	dh_shlibdeps -a
 	dh_gencontrol -a
